Fix: minor spacing issues for content

--- a/src/components/ui/content.scss
+++ b/src/components/ui/content.scss
@@ -31,7 +31,7 @@
 
 	h1,
 	h2 {
-		margin-top: 3rem;
+		margin-top: 2rem;
 		padding: 0.25rem;
 		font-family: var(--font);
 		font-size: 1em;
@@ -66,7 +66,7 @@
 
 	ul {
 		padding-left: 0.5rem;
-		margin: 1.5rem 0 2rem;
+		margin: 1.5rem 0;
 		list-style: none;
 
 		ul {
